Add CName for GitHub-Pages and update layouts

--- a/harmony.html
+++ b/harmony.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Harmony - Kieran Noble</title>
     <link rel="stylesheet" href="/dist/output.css">
 </head>
@@ -17,7 +17,7 @@
     <header class="section section--primary section--centered">
         <div class="content layout__column layout__column--ignoreMobile layout--small">
             <div class="section__title">
-                <img src="dist/tempimg/harmonylogo.png" class="section__logo" width="200px">
+                <img src="dist/tempimg/harmony-white.svg" class="section__logo" width="200px">
             </div>
             <h2 class="section__subtitle">An E-Commerce platform for the modern music industry</h2>
             <h3>This project is the outcome of <a href="https://www.iweb.co.uk/">iWeb</a>'s client briefing during an
@@ -59,12 +59,12 @@
         </section>
         <section class="section section--tertiary section--right">
             <div class="content layout layout__column layout--small">
-                <span class="section__title">UI/UX Prototype</span>
-                <div class="layout layout__row layout__row--nowrap">
+                <div class="layout layout__row layout__row--equal">
                     <div>
                         <img class="section__image" src="/dist/tempimg/IysyFGJKrWtMQEXDntNIN962xePyVwFGyX3tXwzs.png">
                     </div>
                     <div class="layout layout__column layout--small">
+                        <span class="section__title">UI/UX Prototype</span>
                         <div class="section__subtitle">After the meeting with the client, we implemented the inital
                             version of our UI/UX Prototype.</div>
                         <p>We tried to play to the strenghs of the team, and as Sam was the member with the most
@@ -109,7 +109,10 @@
                 <div class="">
                     <img class="section__image" src="/dist/tempimg/KjIqU9Y5ddcFSgI7frxXqVyxWmUioQ9MhkCtH6HG.png" 1>
                 </div>
-                <p>Ultimately, this project received a grade of 96% (1st), which is accrediable in no small part to the great team that we had - our attiudes to succeed and the love and passion that we all had fro the project was noted by the client who congratulated us on creating a project that functions the way that it does so quickly and professionally. </p>
+                <p>Ultimately, this project received a grade of 96% (1st), which is accrediable in no small part to the
+                    great team that we had - our attiudes to succeed and the love and passion that we all had fro the
+                    project was noted by the client who congratulated us on creating a project that functions the way
+                    that it does so quickly and professionally. </p>
                 <p>
                     The team for this project were:
                     <ul>
@@ -122,21 +125,20 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="logo"></div>
-        <div class="footer__contact">kieran@aylo.net</div>
+        <div class="logo logo--default"></div>
+        <div class="footer__contact">
+            <a href="mailto:kieran@aylo.net">howdy@kierannoble.dev</a>
+        </div>
         <div class="footer__contact-note">Feel free to drop me an email, I'd ❤️ to hear from you!</div>
         <div class="footer__socialLinks">
             <a href="#" class="socialLink">
-                <img class="socialLink__image"
-                    src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg">
+                <img class="socialLink__image" src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg">
             </a>
             <a href="#" class="socialLink">
-                <img class="socialLink__image"
-                    src="https://cdn.freebiesupply.com/logos/large/2x/twitter-3-logo-svg-vector.svg">
+                <img class="socialLink__image" src="https://cdn.freebiesupply.com/logos/large/2x/twitter-3-logo-svg-vector.svg">
             </a>
             <a href="#" class="socialLink">
-                <img class="socialLink__image"
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Circle-icons-mail.svg/2048px-Circle-icons-mail.svg.png">
+                <img class="socialLink__image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Circle-icons-mail.svg/2048px-Circle-icons-mail.svg.png">
             </a>
         </div>
     </footer>
