--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Kieran Noble</title>
     <link rel="stylesheet" href="/dist/output.css">
 </head>
@@ -27,8 +27,8 @@
             <a href="harmony.html" class="harmony layout__column--double">
                 <article class="portfolio-card">
                     <div class="portfolio-card__title">
-                        <img class="portfolio-card__title-logo" src="/dist/tempimg/harmonylogo.png">
-                        <div class="portfolio-card__title-description">An E-Commerce platform for the modern music industry</div>
+                        <img class="portfolio-card__title-logo" src="/dist/tempimg/harmony-white.svg">
+                        <div class="portfolio-card__title-description">An E-Commerce platform for a modern music store</div>
                     </div>
                     <div class="portfolio-card__chip">
                         Backend
@@ -37,6 +37,21 @@
                     <span class="portfolio-card__action-text"></span>
                 </article>
             </a>
+            <a href="pinewood.html" class="pinewood">
+                <article class="portfolio-card">
+                    <div class="portfolio-card__title">
+                        <img class="portfolio-card__title-logo" src="/dist/tempimg/pinewoodlogo.png">
+                        <div class="portfolio-card__title-description">Pinewood Description</div>
+                    </div>
+                    <div class="portfolio-card__chip">
+                        Placement
+                    </div>
+                    <div class="portfolio-card__action"></div>
+                    <span class="portfolio-card__action-text"></span>
+                </article>
+            </a>
+        </section>
+        <section class="layout__row layout__row--wrap">
             <a href="photi.html" class="photi">
                 <article class="portfolio-card">
                     <div class="portfolio-card__title">
@@ -45,21 +60,6 @@
                     </div>
                     <div class="portfolio-card__chip">
                         Web Development
-                    </div>
-                    <div class="portfolio-card__action"></div>
-                    <span class="portfolio-card__action-text"></span>
-                </article>
-            </a>
-        </section>
-        <section class="layout__row">
-            <a href="#" class="green">
-                <article class="portfolio-card">
-                    <div class="portfolio-card__title">
-                        <img class="portfolio-card__title-logo" src="/dist/tempimg/pinewoodlogo.png">
-                        <div class="portfolio-card__title-description">Pinewood Description</div>
-                    </div>
-                    <div class="portfolio-card__chip">
-                        Internship
                     </div>
                     <div class="portfolio-card__action"></div>
                     <span class="portfolio-card__action-text"></span>
@@ -95,8 +95,10 @@
     </main>
     <footer class="footer">
         <div class="seperator"></div>
-        <div class="logo"></div>
-        <div class="footer__contact">kieran@aylo.net</div>
+        <div class="logo logo--default"></div>
+        <div class="footer__contact">
+            <a href="mailto:kieran@aylo.net">howdy@kierannoble.dev</a>
+        </div>
         <div class="footer__contact-note">Feel free to drop me an email, I'd ❤️ to hear from you!</div>
         <div class="footer__socialLinks">
             <a href="#" class="socialLink">
