--- a/index.html
+++ b/index.html
@@ -1,116 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Kieran Noble</title>
     <link rel="stylesheet" href="/dist/output.css">
+    <link rel="preload" href="/dist/brandon-grotesque-black.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="/dist/Lato-Bold.ttf" as="font" type="font/ttf">
+    <link rel="preload" href="/dist/Lato-Regular.ttf" as="font" type="font/ttf">
+    <link rel="preload" href="/dist/Lato-Light.ttf" as="font" type="font/ttf">
 </head>
+
 <body class="layout layout--portfolio">
     <nav class="navigation navigation--default">
         <a class="logo" href="/"></a>
-        <a class="navigation__action" href="#">CV</a>
     </nav>
     <header class="intro">
         <img class="intro__avatar" src="https://aylo.net/static/portfolio/kieran.webp" height="150">
         <div class="intro__text-container">
-            <div class="intro__name">Howdy, I'm Kieran</div>
-            <div class="intro__title">Full Stack Developer</div>
+            <h1 class="intro__name">Howdy, I'm Kieran</h1>
+            <h2 class="intro__title">Full Stack Developer</h2>
             <div class="seperator seperator--small"></div>
-            <div class="intro__description">Hello There! I'm an aspiring and enthusiastic full stack web experience developer 🙋‍♂️</div>
+            <div class="intro__description">Hello There! I'm an aspiring and enthusiastic full stack web experience
+                developer 🙋‍♂️</div>
         </div>
     </header>
     <div class="seperator"></div>
     <main class="layout">
         <section class="layout__row">
-            <a href="harmony.html" class="harmony layout__column--double">
-                <article class="portfolio-card">
-                    <div class="portfolio-card__title">
-                        <img class="portfolio-card__title-logo" src="/dist/tempimg/harmony-white.svg">
-                        <div class="portfolio-card__title-description">An E-Commerce platform for a modern music store</div>
-                    </div>
-                    <div class="portfolio-card__chip">
-                        Backend
-                    </div>
-                    <div class="portfolio-card__action"></div>
-                    <span class="portfolio-card__action-text"></span>
-                </article>
-            </a>
-            <a href="pinewood.html" class="pinewood">
-                <article class="portfolio-card">
-                    <div class="portfolio-card__title">
-                        <img class="portfolio-card__title-logo" src="/dist/tempimg/pinewoodlogo.png">
-                        <div class="portfolio-card__title-description">Pinewood Description</div>
-                    </div>
-                    <div class="portfolio-card__chip">
-                        Placement
-                    </div>
-                    <div class="portfolio-card__action"></div>
-                    <span class="portfolio-card__action-text"></span>
-                </article>
-            </a>
-        </section>
-        <section class="layout__row layout__row--wrap">
-            <a href="photi.html" class="photi">
-                <article class="portfolio-card">
-                    <div class="portfolio-card__title">
-                        <img class="portfolio-card__title-logo" src="/dist/tempimg/photilogo.png">
-                        <div class="portfolio-card__title-description">Photi Description</div>
-                    </div>
-                    <div class="portfolio-card__chip">
-                        Web Development
-                    </div>
-                    <div class="portfolio-card__action"></div>
-                    <span class="portfolio-card__action-text"></span>
-                </article>
-            </a>
-            <a href="#" class="yellow">
-                <article class="portfolio-card">
-                    <div class="portfolio-card__title">
-                        <img class="portfolio-card__title-logo" src="/dist/tempimg/harmonylogo.png">
-                        <div class="portfolio-card__title-description">Harmony Description</div>
-                    </div>
-                    <div class="portfolio-card__chip">
-                        Text
-                    </div>
-                    <div class="portfolio-card__action"></div>
-                    <span class="portfolio-card__action-text"></span>
-                </article>
-            </a>
-            <a href="#" class="red">
-                <article class="portfolio-card">
-                    <div class="portfolio-card__title">
-                        <img class="portfolio-card__title-logo" src="/dist/tempimg/harmonylogo.png">
-                        <div class="portfolio-card__title-description">Harmony Description</div>
-                    </div>
-                    <div class="portfolio-card__chip">
-                        Text
-                    </div>
-                    <div class="portfolio-card__action"></div>
-                    <span class="portfolio-card__action-text"></span>
-                </article>
-            </a>
+            <h2 class="text--center">I'm currently building this site, for more information please take a look at my <a
+                    href="https://aylo.net/portfolio">existing portfolio</a> or email me at <a
+                    href="mailto:howdy@kierannoble.dev">howdy@kierannoble.dev</a></h2>
         </section>
     </main>
     <footer class="footer">
         <div class="seperator"></div>
         <div class="logo logo--default"></div>
         <div class="footer__contact">
-            <a href="mailto:kieran@aylo.net">howdy@kierannoble.dev</a>
+            <a href="mailto:howdy@kierannoble.dev">howdy@kierannoble.dev</a>
         </div>
         <div class="footer__contact-note">Feel free to drop me an email, I'd ❤️ to hear from you!</div>
-        <div class="footer__socialLinks">
-            <a href="#" class="socialLink">
-                <img class="socialLink__image" src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg">
-            </a>
-            <a href="#" class="socialLink">
-                <img class="socialLink__image" src="https://cdn.freebiesupply.com/logos/large/2x/twitter-3-logo-svg-vector.svg">
-            </a>
-            <a href="#" class="socialLink">
-                <img class="socialLink__image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Circle-icons-mail.svg/2048px-Circle-icons-mail.svg.png">
-            </a>
-        </div>
     </footer>
 </body>
+
 </html>
