Add favicon and fix font loading

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Kieran Noble</title>
     <link rel="stylesheet" href="/dist/output.css">
-    <link rel="preload" href="/dist/brandon-grotesque-black.woff2" as="font" type="font/woff2">
-    <link rel="preload" href="/dist/Lato-Bold.ttf" as="font" type="font/ttf">
-    <link rel="preload" href="/dist/Lato-Regular.ttf" as="font" type="font/ttf">
-    <link rel="preload" href="/dist/Lato-Light.ttf" as="font" type="font/ttf">
+    <link rel="shortcut icon" type="image/png" href="/dist/favicon.png" />
+    <link rel="preload" href="/dist/brandon-grotesque-black.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/dist/Lato-Bold.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/dist/Lato-Light.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/dist/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin>
 </head>
+
+<!-- Version: 20220802-1259 -->
 
 <body class="layout layout--portfolio">
     <nav class="navigation navigation--default">
         <a class="logo" href="/"></a>
     </nav>
     <header class="intro">
-        <img class="intro__avatar" src="https://aylo.net/static/portfolio/kieran.webp" height="150">
+        <img class="intro__avatar" src="/dist/kieran.webp" height="150">
         <div class="intro__text-container">
             <h1 class="intro__name">Howdy, I'm Kieran</h1>
             <h2 class="intro__title">Full Stack Developer</h2>
@@ -30,9 +33,15 @@
     <div class="seperator"></div>
     <main class="layout">
         <section class="layout__row">
-            <h2 class="text--center">I'm currently building this site, for more information please take a look at my <a
-                    href="https://aylo.net/portfolio">existing portfolio</a> or email me at <a
-                    href="mailto:howdy@kierannoble.dev">howdy@kierannoble.dev</a></h2>
+            <h2 class="text--center">
+                I'm currently building this site, for more information please take a look at my
+                <a href="https://aylo.net/portfolio">existing portfolio</a> or email me at
+                <a href="mailto:howdy@kierannoble.dev">howdy@kierannoble.dev</a>
+            </h2>
+            <h2 class="text--center">
+                If you would like to find out more, you can find me on 
+                <a href="mailto:howdy@kierannoble.dev">LinkedIn</a>
+                </h2>
         </section>
     </main>
     <footer class="footer">
