Refactor and UI Build

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Kieran Noble's personal portfolio and projects">
     <link rel="stylesheet" href="/dist/output.css" async>
     <link rel="shortcut icon" type="image/png" href="/assets/favicon.png" />
+    <script src="/dist/site.js" async></script>
     <link rel="preload" href="/assets/fonts/brandon-grotesque-black.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/assets/fonts/Lato-Bold.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="/assets/fonts/Lato-Light.ttf" as="font" type="font/ttf" crossorigin>
