Remove unused files and fix main.js error

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- /ko -->
     <main class="layout" data-bind="component: content"></main>
     <div data-bind="component: koComponents.footer"></div>
-    <script src="/UI/Pages/Main/_Main.js"></script>
+    <script src="/dist/main.js"></script>
 </body>
 
 </html>
