Update image handling - add content to harmony

--- a/UI/Pages/Items/_Harmony.html
+++ b/UI/Pages/Items/_Harmony.html
@@ -15,11 +15,7 @@
             the different stages in the
             lifecycle of a project and its development - along with the client and our project supervisor, we
             agreed so that we would follow the steps outlined below:</p>
-        <ol>
-            <li>Initial wireframe designs</li>
-            <li>Design prototype mock-up</li>
-            <li>Backend / feature development</li>
-        </ol>
+        <div class="section__image" data-bind="component: koComponents.images.process"></div>
         <p>Surrounding each of these stages we maintained communication both within our team, as well as with
             our project supervisor and the client.</p>
         <p>We implemented an iterative approach to the process which allowed us to all to air our opinions and
@@ -30,7 +26,7 @@
 <section class="section section--centered">
     <div class="content layout layout__column">
         <span class="section__title">Initial Designs</span>
-            <img class="section__image" src="assets/projects/harmony/initial-designs.webp" alt="Initial designs">
+        <div class="section__image" data-bind="component: koComponents.images.initialDesigns"></div>
         <p class="section__subtitle">These wireframe designs were received very well by the client and were
             praised for them looking and
             feeling like something that could be implemented into a real and professional looking product that
@@ -44,7 +40,7 @@
     <div class="content layout layout__column layout--small">
         <div class="layout layout__row layout__row--equal">
             <div>
-                <img class="section__image" src="assets/projects/harmony/prototype-ui.webp" alt="Prototype user interface">
+                <div class="section__image" data-bind="component: koComponents.images.prototype"></div>
             </div>
             <div class="layout layout__column layout--small">
                 <span class="section__title">UI/UX Prototype</span>
@@ -89,9 +85,7 @@
     <div class="content layout layout__column layout--small">
         <span class="section__title">Final Product</span>
         <a href="https://harmony.aylo.net/"><span class="section__subtitle">View Here</span></a>
-        <div>
-            <img class="section__image" src="assets/projects/harmony/final-product.webp" alt="Final product">
-        </div>
+        <div class="section__image" data-bind="component: koComponents.images.final"></div>
         <p>Ultimately, this project received a grade of 96% (1st), which is accredible in no small part to the
             great team that we had - our attitudes to succeed and the love and passion that we all had for the
             project was noted by the client who congratulated us on creating a project that functions the way
