--- a/UI/Pages/Items/_Pinewood.html
+++ b/UI/Pages/Items/_Pinewood.html
@@ -89,19 +89,7 @@
 <section class="section section--secondary section--centered">
     <div class="content content layout layout__column">
         <span class="section__title">UX Project Outcomes</span>
-        <div class="layout layout__row layout__row--equal">
-            <img class="section__image" src="/assets/projects/pinewood/dashboard-1.webp" alt="Final product">
-            <div class="layout layout__column layout--nogap">
-                <div class="layout layout__row layout__row--equal">
-                    <img class="section__image" src="/assets/projects/pinewood/dashboard-2.webp" alt="Final product">
-                    <img class="section__image" src="/assets/projects/pinewood/dashboard-3.webp" alt="Final product">
-                </div>
-                <div class="layout layout__row layout__row--equal">
-                    <img class="section__image" src="/assets/projects/pinewood/dashboard-4.webp" alt="Final product">
-                    <img class="section__image" src="/assets/projects/pinewood/dashboard-5.webp" alt="Final product">
-                </div>
-            </div>
-        </div>
+        <div class="section__image" data-bind="component: koComponents.images.outcome">
     </div>
 </section>
 <section class="section section--primary">
